# fieldsim

./: .gitignore  Cargo.toml  Makefile  README.md  fieldsim.org  rustfmt.toml
models/: cube.off  pi-sphere.off  pi-sphere.scad  sphere.off
src/: bbox.rs  face.rs  intersection.rs  lib.rs  main.rs  obj.rs  off_loader.rs  point.rs  stl_loader.rs  types.rs
