[package]
name = "fieldsim"
version = "0.1.0"
authors = ["Derek <physci@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# stl_io = "0.4.2"
# tri-mesh = "0.4.0"
rand = "0.7.2"
regex = "1"
simple-error = "0.1"
# nalgebra = "0.10.*"
# bvh = "0.3.1"

